revert changes for animated terminal

--- a/src/components/AnimatedTerminal.astro
+++ b/src/components/AnimatedTerminal.astro
@@ -246,7 +246,7 @@ ${versionLine}
 </script>
 
 <div class="terminal-wrapper rounded-lg shadow-lg" style="background: #2e3440;" data-latest-release={latestRelease}>
-  <div class={`top-bar flex p-3 space-x-2 rounded-t-lg`}>
+  <div class="top-bar flex p-3 space-x-2 rounded-t-lg" style="background: #2e3440;">
     <div class="block rounded-full bg-slate-500 w-3 h-3"></div>
     <div class="block rounded-full bg-slate-500 w-3 h-3"></div>
     <div class="block rounded-full bg-slate-500 w-3 h-3"></div>
