--- a/src/components/quickstart/Cloud.astro
+++ b/src/components/quickstart/Cloud.astro
@@ -4,6 +4,7 @@ import Tabs from "@components/Tabs.astro"
 import { Code } from "astro/components"
 import CommunityCTA from "./CommunityCTA.astro"
 import Examples from "./Examples.astro"
+import { SHIKI_THEMES } from "../../const"
 
 export interface Props {
   latestVersion: string
@@ -41,7 +42,7 @@ const { latestVersion } = Astro.props
     }
 }
 `}
-              themes={{ light: "catppuccin-latte" as const, dark: "one-dark-pro" as const }}
+              themes={SHIKI_THEMES}
               defaultColor={false}
               lang="json"
             />
