add height width to the logo

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -68,12 +68,16 @@ import ThemeToggle from "./ThemeToggle.astro"
         src="/logos/ddev.svg"
         alt="DDEV logo"
         aria-hidden="true"
+        width="293"
+        height="69"
       />
       <img
         class="h-8 w-auto sm:h-10 hidden dark:block"
         src="/logos/dark-ddev.svg"
         alt="DDEV logo"
         aria-hidden="true"
+        width="293"
+        height="69"
       />
     </a>
     <div class="w-2/3 flex justify-end items-center gap-6">
