chore: remove Plausible

--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -5,7 +5,7 @@ import PostBody from "../components/PostBody.astro"
 const title = `404`
 ---
 
-<Layout title={title} noindex={true} is404={true}>
+<Layout title={title} noindex={true}>
   <main class="max-w-4xl mx-auto mb-24 px-6 lg:px-0">
     <h1 class="font-mono text-5xl my-24 mb-8 dark:text-white">{title}</h1>
     <PostBody>
