--- a/src/pages/blog/[id].astro
+++ b/src/pages/blog/[id].astro
@@ -84,6 +84,7 @@ const blogPostSchema = [
   ogImageAlt={hasFeatureImage ? entry.data.featureImage.alt : null}
   structuredData={blogPostSchema}
   pubDate={entry.data.pubDate}
+  modifiedDate={entry.data.modifiedDate}
 >
   <main class="max-w-4xl mx-auto mb-24">
     <Heading
