--- a/src/pages/blog/[id].astro
+++ b/src/pages/blog/[id].astro
@@ -122,6 +122,7 @@ const blogPostSchema = [
           <Content />
           <giscus-comments></giscus-comments>
           <script src="/src/scripts/giscus-comments.js"></script>
+          <script src="/src/scripts/mermaid-diagrams.js"></script>
         </PostBody>
       </div>
       <div class="px-6 lg:px-0 lg:w-1/3 lg:pl-24 mt-12 lg:mt-1">
